# gpoetry

./: .gitignore  LICENSE  README.md  pyproject.toml  todo.md
gpoetry/: config.py  data.py  generation.py  main.py  model.py  tokenization.py  train.py
gpoetry/commands/: gen.py  inference.py  train.py
gpoetry/core/: config.py  data.py  generation.py  model.py  model_io.py  tokenization.py  training.py
tests/: test_dataset.py  test_model.py  test_tokenization.py
tiny_poet/: config.py
