[project]
name = "tiny_poet"
version = "0.1.0"
description = "A new GPT model that talks like a poet"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["datasets>=4.1.1", "torch>=2.8.0"]

[dependency-groups]
dev = ["pytest>=8.4.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v"

[project.scripts]
tiny_poet = "tiny_poet.main:main"
