[project]
name = "gpoetry"
version = "0.1.0"
description = "A new GPT model that talks like a poet"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "datasets>=4.1.1",
  "safetensors>=0.6.2",
  "torch>=2.8.0",
  "typer>=0.19.2",
]

[dependency-groups]
dev = ["pytest>=8.4.2"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v"

[project.scripts]
gpoetry = "gpoetry.main:app"
